Found the reason for the bug. There was white space in between the rows which caused it to go over the container-grid. Added the ff css setting to .gridBox : padding, , margin and border = 0; Then tried changing from display:inline-block to float and boom white space gone! Also tried to run in chrome and it is running fine even on 64x64 grid.

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,11 @@
 
 
 .gridBox{
-	display:inline-block;
+	
+	border:none;
+	margin: 0;
+	padding: 0;
+	float: left;
 }
 
 
